# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "example-hello-world-jar",
]

[package]
name            = "jerk"
version         = "0.2.0-git"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
description     = "Java Embedding Rust Kit"
documentation   = "https://docs.rs/jerk/"
repository      = "https://github.com/MaulingMonkey/jerk"
keywords        = ["java", "jvm", "test", "build", "metabuild"]
categories      = ["development-tools::build-utils", "development-tools::testing"]
license         = "MIT OR Apache-2.0"
include         = ["/src/**/*.rs", "build.rs", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "/Readme.md"]
readme          = "Readme.md"
# rust-version  = "1.54" # doc = include_str! per https://blog.rust-lang.org/2021/07/29/Rust-1.54.0.html#attributes-can-invoke-function-like-macros

[package.metadata.docs.rs]
features = ["nightly"]

[badges]
maintenance = { status = "experimental" }

[features]
default         = []
nightly         = []

[dependencies]
jni-sys         = "0.3"
bitflags        = "=2.3.*"  # MSRV 1.46.0   https://github.com/bitflags/bitflags#rust-version-support
lazy_static     = "=1.4.*"  # MSRV 1.27.2   for this minor version: https://github.com/rust-lang-nursery/lazy-static.rs#minimum-supported-rustc

[target.'cfg(unix)'.dependencies]
libc            = "0.2.66"  # MSRV 1.13.0   https://github.com/rust-lang/libc#rust-version-support
