# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "example-hello-world-jar"
version = "0.0.0"
publish = false
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
jni-sys     = "0.3"
jerk-test   = { version = "0.2.0-git", path = "../jerk-test" }

[build-dependencies]
jerk-build  = { version = "0.2.0-git", path = "../jerk-build" }

[dev-dependencies]
jerk-test   = { version = "0.2.0-git", path = "../jerk-test" }
