# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "example-hello-world-jar"
version = "0.0.0-git"
publish = false
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
jni-sys     = "0.3"
jerk        = { version = "0.2.3", path = ".." }

[build-dependencies]
jerk        = { version = "0.2.3", path = ".." }
