# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "jerk-build"
version         = "0.2.1"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
description     = "Merged into jerk"
documentation   = "https://docs.rs/jerk-build/"
repository      = "https://github.com/MaulingMonkey/jerk"
keywords        = []
categories      = []
license         = "MIT OR Apache-2.0"
include         = ["/**/*.rs", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "/Readme.md"]
readme          = "Readme.md"

[package.metadata.docs.rs]
features = ["nightly"]

[badges]
maintenance = { status = "deprecated" }

[features]
default         = []
nightly         = ["jerk/nightly"]

[dependencies]
jerk            = { version = "0.2.1", path = ".." }
