# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "jerk-test"
version         = "0.1.6"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
description     = "Java Embedding Rust Kit - Unit Testing"
documentation   = "https://docs.rs/jerk-test/"
repository      = "https://github.com/MaulingMonkey/jerk"
keywords        = ["java", "jvm", "test"]
categories      = ["development-tools::testing"]
license         = "MIT OR Apache-2.0"
include         = ["/**/*.rs", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "/Readme.md"]
readme          = "Readme.md"

[package.metadata.docs.rs]
features = ["nightly"]

[features]
default         = []
nightly         = []

[dependencies]
jerk            = { version = "0.1.6", path = "../jerk" }
jni-sys         = "0.3"
lazy_static     = "1.4"
