# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "jerk"
version         = "0.0.0"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
description     = "Java Embedding Rust Kit - Common"
documentation   = "https://docs.rs/jerk/"
repository      = "https://github.com/MaulingMonkey/jerk"
keywords        = ["java", "jvm"]
categories      = []
license         = "MIT OR Apache-2.0"
include         = ["/**/*.rs", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "/Readme.md"]
readme          = "Readme.md"

[features]
default         = [] # XXX: These features do nothing now
nightly         = [] # XXX: These features do nothing now

[dependencies]
dlopen          = "0.1"
dlopen_derive   = "0.1"
jni-sys         = "0.3"
rustversion     = "1.0"
winapi          = { version = "0.3", features = ["winerror"] }
